xp-maven-plugin (3.1.8)

  * Refactor plexus Logger by adding the LogLogger wrapper class
  * Fix "Class 'java.util.List' cannot be instantiated" in Maven2

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 08 Nov 2012


xp-maven-plugin (3.1.7)

  * Fix plexus Logger not-set issue -> NullPointerException

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Wed, 07 Nov 2012

xp-maven-plugin (3.1.6)

  * move all operation from phase "validate" to phase "initialize"
  * use new XP-Runners
  * update project name to "XP-Framework Maven plugin"
  * include on-the-fly generated "META-INF/manifest.ini" in output artifact
  * use org.codehaus.plexus.archiver.Archiver.addFileSet() instead of the deprecated addDirectory()
  * update examples in "examples" directory
  * application directories (webapp, config, xsl) now copied to ${outputDirectory} during the "compile" phase
  * change default unittest ini files location to 'src/test/config/unittest'
  * move pth files handling to its own class
  * refactor "package" and "test-package" phases
  * refactor runners location; add "svn" runner
  * add "svn-deploy" goal

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Fri, 19 Oct 2012

xp-maven-plugin (3.1.5)

  * use Maven output when displaying unittest results
  * remove ${xp.package.format} and replace it with ${project.packaging}
  * create just one pth file (project.pth) for "lib" ${xp.package.strategy}

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 25 Sep 2012

xp-maven-plugin (3.1.4)

  * fix the "test-package" goal

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 20 Sep 2012

xp-maven-plugin (3.1.3)

  * change artifact id from 'net.xp-framework:language' to 'net.xp-framework:compiler'

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012

xp-maven-plugin (3.1.2)

  * change default unittest ini files location to 'src/test/ini'
  * add ${project.classifier} property to specify project classifier

 -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012
